@@ -199,6 +199,10 @@ xvc_appdata_init (XVC_AppData * lapp)
     lapp->dmg_event_base = 0;
 #endif     // USE_XDAMAGE
 
+#ifdef USE_DBUS
+    lapp->xso = NULL;
+#endif // USE_DBUS
+
     xvc_captypeoptions_init (&(lapp->single_frame));
 #ifdef USE_FFMPEG
     xvc_captypeoptions_init (&(lapp->multi_frame));
@@ -345,6 +349,10 @@ xvc_appdata_set_defaults (XVC_AppData * lapp)
     lapp->default_mode = 0;
 #endif     // USE_FFMPEG
 
+#ifdef USE_DBUS
+    lapp->xso = xvc_server_object_new();
+#endif // USE_DBUS
+
     // initialzie options specific to either single- or multi-frame capture
     lapp->single_frame.quality = lapp->multi_frame.quality = 90;
     lapp->single_frame.step = lapp->multi_frame.step = 1;
@@ -453,6 +461,10 @@ xvc_appdata_copy (XVC_AppData * tapp, XVC_AppData * sapp)
 #ifdef HasVideo4Linux
     tapp->device = strdup (sapp->device);
 #endif     // HasVideo4Linux
+
+#ifdef USE_DBUS
+    tapp->xso = sapp->xso;
+#endif // USE_DBUS
 
     tapp->default_mode = sapp->default_mode;
     tapp->current_mode = sapp->current_mode;
