@@ -5,6 +5,7 @@
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
+#include <dbus/dbus-glib-bindings.h>
 #endif     // DOXYGEN_SHOULD_SKIP_THIS
 
 #ifdef __cplusplus
@@ -12,21 +13,27 @@ extern "C"
 {
 #endif     /* __cplusplus */
 
-#define XVC_SERVER_OBJECT_GET_CLASS(object)  (G_TYPE_INSTANCE_GET_CLASS ((object), xvc_server_object_get_type(), XvcServerObjectClass))
 
 /* Standard GObject class structures, etc */
 typedef struct
 {
+	GObjectClass parent_class;
         DBusGConnection *connection;
 }XvcServerObjectClass;
 
 typedef struct
 {
-	gboolean truth;
+	GObject parent_instance;
 }XvcServerObject;
 
 
-gboolean xvc_server_echo_string (XvcServerObject *server, gchar *original, gchar **echo, GError **error);
+XvcServerObject * xvc_server_object_new ();
+gboolean xvc_dbus_echo_string (XvcServerObject *server, gchar *original, gchar **echo, GError **error);
+GType xvc_server_object_get_type ();
+
+
+#define XVC_SERVER_OBJECT_GET_CLASS(object)  (G_TYPE_INSTANCE_GET_CLASS ((object), xvc_server_object_get_type(), XvcServerObjectClass))
+#define XVC_SERVER_OBJECT(object)            (G_TYPE_CHECK_INSTANCE_CAST ((object), xvc_server_object_get_type(), XvcServerObject))
 
 
 #ifdef __cplusplus
