@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<node name="/net/jarre-de-the/Xvidcap">
-	<interface name="net.jarre-de-the.Xvidcap">
-		<annotation name="org.freedesktop.DBus.GLib.CSymbol" value="xvc_server"/>
+<node name="/net/jarre_de_the/Xvidcap">
+	<interface name="net.jarre_de_the.Xvidcap">
+		<annotation name="org.freedesktop.DBus.GLib.CSymbol" value="xvc_dbus"/>
 		<method name="EchoString">
 			<arg type="s" name="original" direction="in" />
 			<arg type="s" name="echo" direction="out" />
